--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "adapt-authoring-usergroups",
   "version": "0.0.1",
   "description": "Module for managing group of users",
-  "homepage": "https://github.com/adapt-security/adapt-authoring-usergroups",
+  "homepage": "https://github.com/adaptlearning/adapt-authoring-usergroups",
+  "license": "GPL-3.0",
+  "repository": "github:adaptlearning/adapt-authoring-usergroups",
   "main": "index.js",
   "peerDependencies": {
     "adapt-authoring-api": "github:adapt-security/adapt-authoring-api.git",
