--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Module for managing group of users",
   "homepage": "https://github.com/adaptlearning/adapt-authoring-usergroups",
   "license": "GPL-3.0",
-  "repository": "github:adaptlearning/adapt-authoring-usergroups",
+  "repository": "adaptlearning/adapt-authoring-usergroups",
   "main": "index.js",
   "peerDependencies": {
-    "adapt-authoring-api": "github:adapt-security/adapt-authoring-api.git",
-    "adapt-authoring-core": "github:adapt-security/adapt-authoring-core.git",
-    "adapt-authoring-users": "github:adapt-security/adapt-authoring-users.git"
+    "adapt-authoring-api": "adapt-security/adapt-authoring-api",
+    "adapt-authoring-core": "adapt-security/adapt-authoring-core",
+    "adapt-authoring-users": "adapt-security/adapt-authoring-users"
   }
 }
