Refactor as ES Modules

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Module for managing group of users",
   "homepage": "https://github.com/adaptlearning/adapt-authoring-usergroups",
   "license": "GPL-3.0",
+  "type": "module",
   "main": "index.js",
   "repository": "adaptlearning/adapt-authoring-usergroups",
   "peerDependencies": {
