--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "repository": "adaptlearning/adapt-authoring-usergroups",
   "peerDependencies": {
-    "adapt-authoring-api": "adapt-security/adapt-authoring-api",
-    "adapt-authoring-core": "adapt-security/adapt-authoring-core",
-    "adapt-authoring-users": "adapt-security/adapt-authoring-users"
+    "adapt-authoring-api": "github:adapt-security/adapt-authoring-api",
+    "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
+    "adapt-authoring-users": "github:adapt-security/adapt-authoring-users"
   }
 }
