--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "adapt-authoring-usergroups",
   "version": "0.0.1",
   "description": "Module for managing group of users",
-  "homepage": "https://github.com/adaptlearning/adapt-authoring-usergroups",
+  "homepage": "https://github.com/adapt-security/adapt-authoring-usergroups",
   "license": "GPL-3.0",
   "type": "module",
   "main": "index.js",
-  "repository": "adaptlearning/adapt-authoring-usergroups",
+  "repository": "github:adapt-security/adapt-authoring-usergroups",
   "peerDependencies": {
     "adapt-authoring-api": "github:adapt-security/adapt-authoring-api",
     "adapt-authoring-core": "github:adapt-security/adapt-authoring-core",
